<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/action_alpha"
        android:title="@string/alpha_animation"
        android:orderInCategory="100"
        app:showAsAction="never"
        />

    <item android:id="@+id/action_rotate"
        android:title="@string/rotate_animation"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_scale"
        android:title="@string/scale_animation"
        app:showAsAction="never"
        android:orderInCategory="100"/>

    <item android:id="@+id/action_translate"
        android:title="@string/translate_animation"
        app:showAsAction="never"
        android:orderInCategory="100"/>

    <item android:id="@+id/action_set"
        android:title="@string/animation_set"
        android:orderInCategory="100"
        app:showAsAction="never"/>

</menu>